# pystockdb

./: .gitignore  .releaserc  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml  pr.yml  release.yml
src/pystockdb/db/schema/: stocks.py
src/pystockdb/tools/: __init__.py  base.py  create.py  data_crawler.py  fundamentals.py  sync.py  update.py
tests/: test_crawler.py  test_db.py
