[tool.poetry]
name = "pystockdb"
version = "1.2.0"
description = "Database for stocks this package provides an create, sync and update tool."
authors = ["SlashGordon <slash.gordon.dev@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytickersymbols = "^1.15.0"
pandas = "^2.1.3"
yfinance = "^0.2.32"
uplink = "^0.9.7"
pony = "^0.7.17"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
wheel = "^0.41.3"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
autopep8 = "^2.0.4"
freezegun = "^1.2.2"
black = "^23.11.0"
pytest-order = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "src/pystockdb/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "tests/ --junitxml test-results/test.xml --cov src/pystockdb --cov-report term-missing"
pythonpath = ["src"]